[package]
name = "rotor"
version = "0.0.1"
authors = ["Fran Acién <acien@ea4rct.org>"]
build = "build.rs"

[dependencies]
clap = "*"
libc = "*"
time = "*"
num = "*"
log = "*"

[dependencies.gpredict]
git = "https://github.com/cubehub/rust-gpredict.git"

[dependencies.liquid_dsp]
git = "https://github.com/cubehub/rust-liquid-dsp.git"

[dependencies.fern]
git = "https://github.com/marjakm/fern-rs.git"

[build-dependencies]
gcc = "*"
